--- a/therm.html
+++ b/therm.html
@@ -16,6 +16,10 @@
         <div class="innerDiv">
             <h1 class="main-heading">I am Thermometer <span id="temp" class="fawsm"></span></h1>
         </div>
+        <br>
+        <br>
+        <div class="innerDiv1"></div>
+        <h1 class="main-heading">I am Thermometer <span id="temp1" class="fawsm"></span></h1>
     </div>
     <script src="therm.js"></script>
 </body>
